--- a/style.css
+++ b/style.css
@@ -525,6 +525,7 @@ font-size: 18px;
     border:1px solid var(--white-alpha-40);
     margin:auto;
     border-radius: 10px;
+    overflow: hidden;
 }
 .about-img .img-box img{
     width:100%;
