--- a/style.css
+++ b/style.css
@@ -664,6 +664,7 @@ font-size: 18px;
 .portfolio-item-thumbnail img{
     width:100%;
     border-radius: 10px;
+    height: 30vh;
 }
 .portfolio-item h3{
     font-size: 20px;
